--- a/index.html
+++ b/index.html
@@ -79,6 +79,6 @@
         >. Coded by <a href="#">Your Name Here</a>.
       </footer>
     </nav>
-    <script src="scriptClass.js"></script>
+    <script src="todo-app-refactor.js"></script>
   </body>
 </html>
